Update CollectionsDataService.java